@@ -15,6 +15,8 @@ nipype tutorial directory:
 
 Import necessary modules from nipype."""
 
+import os                                    # system functions
+
 from nipype import config
 config.enable_provenance()
 
@@ -30,8 +32,7 @@ import nipype.interfaces.utility as util     # utility
 import nipype.pipeline.engine as pe          # pypeline engine
 import nipype.algorithms.rapidart as ra      # artifact detection
 import nipype.algorithms.modelgen as model   # model specification
-import os                                    # system functions
-
+import nipype.interfaces.matlab as mlab
 """
 
 Preliminaries
@@ -49,6 +50,8 @@ fsl.FSLCommand.set_default_output_type('NIFTI')
 # Set the way matlab should be called
 # import nipype.interfaces.matlab as mlab      # how to run matlab
 # mlab.MatlabCommand.set_default_matlab_cmd("matlab -nodesktop -nosplash")
+
+mlab.MatlabCommand.set_default_paths('/software/matlab/spm12b/spm12b_r5918')
 
 """The nipype tutorial contains data for two subjects.  Subject data
 is in two subdirectories, ``s1`` and ``s2``.  Each subject directory
@@ -70,7 +73,7 @@ nifti filename through a template '%s.nii'. So 'f3' would become
 # Specify the location of the data.
 data_dir = os.path.abspath('data')
 # Specify the subject directories
-subject_list = ['s1', 's3']
+subject_list = ['s1'] #, 's3']
 # Map field names to individual subject runs.
 info = dict(func=[['subject_id', ['f3','f5','f7','f10']]],
             struct=[['subject_id','struct']])
@@ -392,4 +395,4 @@ function needs to be called.
 
 if __name__ == '__main__':
     l1pipeline.run('MultiProc')
-    l2pipeline.run('MultiProc')
+    #l2pipeline.run('MultiProc')
