@@ -19,6 +19,7 @@ Next Release
 * ENH: New ANTs interface: LaplacianThickness
 * FIX: MRTrix tracking algorithms were ignoring mask parameters.
 * FIX: FNIRT registration pathway and associated OpenFMRI example script
+* FIX: spm12b compatibility for Model estimate
 
 Release 0.9.2 (January 31, 2014)
 ============
